# speech2text

./: app.py  pyproject.toml
.streamlit/: config.toml
